# orquestra

./: .coverage  .env.example  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  GUIA_RAPIDO_v0.5.0.md  IMPLEMENTACAO_v0.5.0.md  README.md  TEST_REPORT.md  llms.txt  pyproject.toml  pytest.ini
examples/: README.md  basic_agent.py  custom_tools.py  debug_example.py  mcp_tools_example.py  memory_example.py  openrouter_example.py  persistence_postgresql.py  persistence_sqlite.py  simple_demo.py  streaming_example.py  vector_rag_example.py  verbose_example.py
src/orquestra/: __init__.py
src/orquestra/agents/: __init__.py  react.py
src/orquestra/core/: __init__.py  agent.py  provider.py  tool.py
src/orquestra/embeddings/: __init__.py  base.py  openai_embeddings.py
src/orquestra/mcp/: __init__.py  client.py  types.py
src/orquestra/memory/: __init__.py  base.py  storage.py
src/orquestra/orchestration/: __init__.py  workflow.py
src/orquestra/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/orquestra/tools/: __init__.py  computation.py  exceptions.py  filesystem.py  search.py
src/orquestra/vectorstores/: __init__.py  base.py  chroma.py
tests/: conftest.py  todo.txt
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_memory.py  test_providers.py  test_react_agent.py  test_storage.py  test_tool.py  test_tools_builtin.py
